--- a/app/src/main/res/layout/second_topic_page.xml
+++ b/app/src/main/res/layout/second_topic_page.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/subjectBu8"
+        android:id="@+id/countryBu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/themeTextView" />
 
     <Button
-        android:id="@+id/subjectBu9"
+        android:id="@+id/natureBu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -47,10 +47,10 @@
         android:text="Luonto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectBu8" />
+        app:layout_constraintTop_toBottomOf="@+id/countryBu" />
 
     <Button
-        android:id="@+id/subjectBu10"
+        android:id="@+id/plantsBu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -58,11 +58,11 @@
         android:text="Kasvit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectBu9" />
+        app:layout_constraintTop_toBottomOf="@+id/natureBu" />
 
 
     <Button
-        android:id="@+id/subjectBu11"
+        android:id="@+id/animalsBu2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -71,5 +71,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectBu10" />
+        app:layout_constraintTop_toBottomOf="@+id/plantsBu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
