--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -22,10 +22,22 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="550dp"
         android:layout_marginTop="15dp"
         android:id="@+id/list_view_scores">
 
     </ListView>
+
+    <Button
+    android:id="@+id/btn_finish_2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="15dp"
+    android:background="@android:color/white"
+    android:text="Lopeta"
+    android:textColor="@color/black"
+    android:textSize="18sp"
+    android:textStyle="bold" />
 
 </LinearLayout>
