--- a/app/src/main/res/layout/question_page.xml
+++ b/app/src/main/res/layout/question_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@color/green">
+    android:background="@drawable/background">
 
 
     <LinearLayout
@@ -22,7 +22,12 @@
             android:layout_margin="10dp"
             android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="22sp"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:shadowColor="@color/white"
+            android:shadowDx="2"
+            android:shadowDy="1.5"
+            android:shadowRadius="3"
             tools:text="Kysymys tulee näkyviin tähän"/>
 
         <LinearLayout
@@ -50,8 +55,12 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="15dp"
+                android:shadowColor="@color/white"
+                android:shadowDx="2"
+                android:shadowDy="1.5"
+                android:shadowRadius="3"
                 android:textColorHint="@color/black"
-                android:textSize="14sp"
+                android:textSize="25sp"
                 tools:text="0/10" />
         </LinearLayout>
 
